[package]
name = "unpackerrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "unpackerrs"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*" }
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = { version = "*", features = ["derive"] }
packed_struct = { version = "0.10", features = ["use_serde"] }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
bincode = { version = "*" }
